[package]
default-run = "main"
name = "math_calculations"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cylinder"
path = "src/cylinder.rs"

[[bin]]
name = "graph"
path = "src/graph.rs"

[[bin]]
name = "graph-backup"
path = "src/graph-backup.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.0"
duration-string = "0.1.1"
plotlib = "0.5.1"
rand = "0.8.5"